.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:59:54 **** Incremental Build of configuration Debug for project tp2 ****
make all 
Building file: ../src/tp2.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/tp2.d" -MT"src/tp2.o" -o "src/tp2.o" "../src/tp2.cpp"
../src/tp2.cpp: In function ‘int main()’:
../src/tp2.cpp:17:2: error: ‘nicola’ was not declared in this scope
  nicola.asgDateOuverture(dateClient);
  ^
../src/tp2.cpp:17:26: error: ‘dateClient’ was not declared in this scope
  nicola.asgDateOuverture(dateClient);
                          ^
src/subdir.mk:27 : la recette pour la cible « src/tp2.o » a échouée
make: *** [src/tp2.o] Erreur 1
17:00:08 **** Incremental Build of configuration Debug for project tp2 ****
make all 
Building file: ../src/tp2.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/tp2.d" -MT"src/tp2.o" -o "src/tp2.o" "../src/tp2.cpp"
Finished building: ../src/tp2.cpp
 
Building target: tp2
Invoking: GCC C++ Linker
g++  -o "tp2"  ./src/Client.o ./src/Date.o ./src/tp2.o ./src/validationFormat.o   
Finished building target: tp2
 
